[CIRC-1966]-Added intigration with circ-item